# Math_Game2

./: .gitignore  README.md  global.d.ts  mongoDB.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
contexts/: constants.ts  index.ts  settingsContext.tsx
pageSpecific/guess/: components.tsx  constants.ts  context.tsx  guessContext.tsx  helpers.ts  index.ts  types.ts
pageSpecific/home/: components.tsx
pageSpecific/login/: components.tsx  helpers.ts
pageSpecific/play/: components.tsx  helpers.tsx  hooks.ts
pages/: _app.tsx  constants.ts  index.tsx  settingsContext.tsx  types.ts
pages/api/: createUser.ts  getPicture.ts  login.ts  saveSettings.ts  types.ts
pages/guess/: index.tsx
pages/home/: components.tsx  constants.ts  helpers.ts  index.tsx
pages/login/: components.tsx  helpers.ts  index.tsx
pages/play/: components.tsx  helpers.tsx  hooks.ts  index.tsx
sharedComponents/: Button.tsx  HomeButton.tsx  TextContainer.tsx  index.ts
sharedHooks/: index.ts  useWasm.ts  useWindowDimensions.ts
types/: index.ts
wasm/: .gitignore  Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
