[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde = {version = "^1.0", features = ["derive"]}
serde_derive = "^1.0.101"